--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@mantine/core": "^7.12.2",
     "@mantine/form": "^7.12.2",
     "@mantine/hooks": "^7.12.2",
+    "@mantine/notifications": "^7.12.2",
     "@primer/octicons-react": "^19.11.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
