--- a/client/package.json
+++ b/client/package.json
@@ -15,12 +15,17 @@
     "@mantine/hooks": "^7.12.2",
     "@mantine/notifications": "^7.12.2",
     "@primer/octicons-react": "^19.11.0",
+    "axios": "^1.7.7",
+    "jwt-decode": "^4.0.0",
+    "lodash": "^4.17.21",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.2",
     "swr": "^2.2.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
+    "@types/lodash": "^4.17.7",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
